[package]
name = "reqwest-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4"
http = "0.2"
reqwest = "0.11"
serde = "1"
serde_json = { version = "1", optional = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-test = {version = "0.2", features = ["no-env-filter"] }

[features]
default = []
json = ["serde_json", "reqwest/json"]
multipart = ["reqwest/multipart"]
