[package]
name = "reqwest-trace"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
async-cell-lock = { git = "https://github.com/danylaporte/async-cell-lock.git", optional = true }
bytes = "1"
http = "0.2"
metrics = { version = "0.22", optional = true }
reqwest = "0.11"
serde = "1"
serde_json = { version = "1", optional = true }
tokio = { version = "1", default_features = false, features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-test = {version = "0.2", features = ["no-env-filter"] }

[features]
async-cell-lock-detect = ["async-cell-lock"]
default = []
json = ["serde_json", "reqwest/json"]
multipart = ["reqwest/multipart"]
telemetry = ["async-cell-lock/telemetry", "metrics"]
